k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: timingle
  labels:
    app.kubernetes.io/name: timingle
    app.kubernetes.io/part-of: timingle
